Migrate journey API from XML to JSON (#249)
* Rename api.key for clarity; include encoded version for Travis CI

* Add API call to journey.json, and basic tests

* Use Roboelectric so TextUtils is mocked

* Convert V1 API XML into newly defined domain JSON

* Put some test framework into cyclestreets-view

* Convert V1 API JSON into domain JSON

* Move XML/JSON transformations into cyclestreets-core library

* Remove some duplication

* Deprecation of XML API endpoints; add JSON equivalents

* Introduce POJO representations of domain objects

* Make use of our new domain object for generating Journey objects

* Add testing of DB upgrades

* Database upgrade procedures

* Use LinkedLists for Segments and Waypoints

* Fix compile error

* Store location lat/lon doubles as strings

* Use bind to avoid apostrophe SQL problems; improve debugging

* Use standard tag derivation throughout