@@ -1,10 +1,8 @@
 package net.cyclestreets.routing;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
+import android.support.annotation.NonNull;
 import org.osmdroid.api.IGeoPoint;
 import org.osmdroid.util.GeoPoint;
 
@@ -16,40 +14,38 @@ public class Waypoints implements Iterable<IGeoPoint>
     return new Waypoints(start, end);
   }
 
-  private final List<IGeoPoint> waypoints_;
+  private final LinkedList<IGeoPoint> waypoints = new LinkedList<>();
 
-  public Waypoints() {
-    waypoints_ = new ArrayList<>();
-  }
+  public Waypoints() {}
 
   private Waypoints(final IGeoPoint from, final IGeoPoint to) {
-    waypoints_ = new ArrayList<>();
-    waypoints_.add(from);
-    waypoints_.add(to);
+    waypoints.add(from);
+    waypoints.add(to);
   }
 
-  private Waypoints(final List<IGeoPoint> points) {
-    waypoints_ = points;
+  public Waypoints(final List<IGeoPoint> points) {
+    waypoints.addAll(points);
   }
 
-  public int count() { return waypoints_.size(); }
-  public boolean isEmpty() { return count() == 0; }
+  public int count() { return waypoints.size(); }
+  public boolean isEmpty() { return waypoints.isEmpty(); }
 
-  public IGeoPoint first() { return count() != 0 ? waypoints_.get(0) : null; }
-  public IGeoPoint last() { return waypoints_.get(count()-1); }
+  public IGeoPoint first() { return waypoints.isEmpty() ? null : waypoints.getFirst(); }
+  public IGeoPoint last() { return waypoints.getLast(); }
 
   public void add(final double lat, final double lon) { add(new GeoPoint(lat, lon)); }
-  public void add(final IGeoPoint geopoint) { waypoints_.add(geopoint); }
+  public void add(final IGeoPoint geopoint) { waypoints.add(geopoint); }
 
-  public IGeoPoint get(final int i) { return waypoints_.get(i); }
+  public IGeoPoint get(final int i) { return waypoints.get(i); }
 
+  @NonNull
   @Override
   public Iterator<IGeoPoint> iterator() {
-    return waypoints_.iterator();
+    return waypoints.iterator();
   }
 
   public Waypoints reversed() {
-    final List<IGeoPoint> points = new ArrayList<>(waypoints_);
+    final List<IGeoPoint> points = new ArrayList<>(waypoints);
     Collections.reverse(points);
     return new Waypoints(points);
   }
