@@ -2,48 +2,47 @@ package net.cyclestreets.routing;
 
 import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 
 import org.osmdroid.api.IGeoPoint;
 
 public class Segments implements Iterable<Segment>
 {
-  private final List<Segment> segments_;
+  private final LinkedList<Segment> segments = new LinkedList<>();
 
-  public Segments() {
-    segments_ = new ArrayList<>();
-  }
+  public Segments() {}
 
-  public int count() { return segments_.size(); }
-  public boolean isEmpty() { return count() == 0; }
+  public int count() { return segments.size(); }
+  public boolean isEmpty() { return segments.isEmpty(); }
 
-  public IGeoPoint startPoint() { return segments_.get(0).start(); }
-  public IGeoPoint finishPoint() { return segments_.get(count()-1).finish(); }
-  public Segment.Start first() { return (Segment.Start)segments_.get(0); }
-  public Segment.End last() { return (Segment.End)segments_.get(count()-1); }
+  public IGeoPoint startPoint() { return segments.getFirst().start(); }
+  public IGeoPoint finishPoint() { return segments.getLast().finish(); }
+  public Segment.Start first() { return (Segment.Start) segments.getFirst(); }
+  public Segment.End last() { return (Segment.End) segments.getLast(); }
 
   public void add(final Segment seg) {
     if (seg instanceof Segment.Start) {
-      segments_.add(0, seg);
+      segments.addFirst(seg);
       return;
     }
 
     if (count() != 0) {
-      final Segment previous = segments_.get(count()-1);
+      final Segment previous = segments.get(count()-1);
       if ("join roundabout".equals(previous.turn().toLowerCase())) {
-        segments_.remove(previous);
-        segments_.add(new Segment.Step(previous, seg));
+        segments.remove(previous);
+        segments.add(new Segment.Step(previous, seg));
         return;
       }
     }
 
-    segments_.add(seg);
+    segments.add(seg);
   }
 
-  public Segment get(final int i) { return segments_.get(i); }
+  public Segment get(final int i) { return segments.get(i); }
 
   @Override
-  public Iterator<Segment> iterator() { return segments_.iterator(); }
+  public Iterator<Segment> iterator() { return segments.iterator(); }
 
   public Iterator<IGeoPoint> pointsIterator() { return new PointsIterator(this); }
 
